# xgc2-observer

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
.xgc2/: cppcheck_suppressions.txt  product.yml
.xgc2/scripts/: build_deb.sh  check_cpp_quality.sh  check_package_compliance.sh  smoke_test_installed.sh
cmake/: xgc2_mathConfig.cmake.in  xgc2_observerConfig.cmake.in
include/: core.hpp  estimation.hpp  filter.hpp  geometry.hpp  math.hpp  observer.hpp  types.hpp
include/core/: angle.hpp  status.hpp  time_delta.hpp
include/estimation/: inertial_pose_eskf.hpp  planar_inertial_eskf.hpp  recursive_least_squares.hpp
include/filter/: butterworth_filter.hpp  exponential_filter.hpp
include/geometry/: geo_utils.hpp  math_helpers.h  quickhull.hpp  sdlp.hpp  se2.hpp
include/geometry/collision/: distance_gjk_query.h  gjk_warm_start_cache.h  guided_axis_gjk_query.h  separating_axis_gjk_query.h  separation_query.h
include/geometry/occupied_sets/: ball_inflated_set.h  box_set.h  capsule_set.h  convex_body.h  cylinder_set.h  ellipsoid_set.h  point_set.h  sphere_set.h  swept_hull_set.h  translated_set_view.h
include/observer/: angle_differentiator.hpp  array_observer.hpp  differentiator.hpp  luenberger_observer.hpp
include/xgc2_math/: algebra.hpp  control.hpp  estimation.hpp  filter.hpp  geometry.hpp  math.hpp  observer.hpp  optimization.hpp  trajectory.hpp  types.hpp  utils.hpp
include/xgc2_math/algebra/: angle.hpp
include/xgc2_math/control/: dfbc_geometric_controller.hpp  se2_nmpc_problem.hpp  se3_nmpc_problem.hpp
include/xgc2_math/estimation/: health.hpp  pose2_inertial_eskf.hpp  pose3_inertial_eskf.hpp  recursive_least_squares.hpp
include/xgc2_math/filter/: exponential_filter.hpp  slew_rate_limiter.hpp
include/xgc2_math/geometry/: geo_utils.hpp  math_helpers.h  quickhull.hpp  se2.hpp  se3.hpp
include/xgc2_math/geometry/collision/: distance_gjk_query.h  gjk_warm_start_cache.h  guided_axis_gjk_query.h  separating_axis_gjk_query.h  separation_query.h
include/xgc2_math/geometry/occupied_sets/: ball_inflated_set.h  box_set.h  capsule_set.h  convex_body.h  convex_set_base.h  cylinder_set.h  ellipsoid_set.h  point_set.h  sphere_set.h  swept_hull_set.h  translated_set_view.h
include/xgc2_math/observer/: angle_differentiator.hpp  array_observer.hpp  differentiator.hpp  luenberger_observer.hpp
include/xgc2_math/optimization/: lbfgs.hpp  minco.hpp  minco_trajectory.hpp  root_finder.hpp
include/xgc2_math/trajectory/: analytic.hpp  flatness.hpp  se2_target_trajectory.hpp  trajectory2.hpp  trajectory3.hpp  types.hpp
include/xgc2_math/trajectory/analytic/: circle.hpp  circle_entry.hpp  detail.hpp  figure_eight.hpp  hold.hpp
include/xgc2_math/trajectory/analytic/2d/: circle_2d.hpp  circle_entry_2d.hpp  figure_eight_2d.hpp  hold_2d.hpp
include/xgc2_math/trajectory/analytic/3d/: circle_3d.hpp  circle_entry_3d.hpp  figure_eight_3d.hpp  helix_xy_3d.hpp  helix_yz_3d.hpp  hold_3d.hpp  lemniscate_3d.hpp  line_3d.hpp  torus_knot_3d.hpp
include/xgc2_math/utils/: status.hpp  time_delta.hpp
include/xgc2_observer/: angle.hpp  angle_differentiator.hpp  array_observer.hpp  differentiator.hpp  exponential_filter.hpp  inertial_pose_eskf.hpp  luenberger_observer.hpp  observer.hpp  recursive_least_squares.hpp  se3.hpp  slew_rate_limiter.hpp  status.hpp  time_delta.hpp
matlab/inertial_pose_eskf/: README.md  run_inertial_pose_eskf_simulation.m
matlab/planar_inertial_eskf/: README.md  run_planar_inertial_eskf_simulation.m
test/: math_header_test.cpp  observer_header_test.cpp
